# monochrome

./: .gitignore  index.html  neutralino.config.json  package-lock.json  package.json  styles.css  sw.js  vite.config.js
.github/workflows/: build.yml  deploy.yml  desktop-build.yml  preview.yml  static.yml
assets/: index-B1tOHQZb.js  index-C8RoCS3S.css  index-UCOxJJL3.js
extensions/js.neutralino.auth/: bridge.py
js/: api.js  app.js  db.js  desktop.js  downloads.js  events.js  player.js  settings.js  spotify-import.js  storage.js  ui.js  utils.js
js/accounts/: auth.js
js/firebase/: sync.js
public/: mitm.html
src-tauri/: Cargo.toml  discord-init.js  package.json  tauri.conf.json
src-tauri/capabilities/: main-capability.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
